# msds-comms-plotter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/processed/: wc2022_goals.parquet  wc2022_player_match_stats.parquet  wc2022_player_tournament_totals.parquet
docs/: wc2022_data.md
src/msds_comms_plotter/: __init__.py  core.py  plots.py  worldcup.py
