[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msds-comms-plotter"
version = "0.1.0"
description = "Example plotting library created by Claude"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "pandas",
    "pyarrow",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]
